--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "udacity-just-java"]
 	path = udacity-just-java
 	url = https://github.com/SuperMex/udacity-just-java
+[submodule "PracticeSet2"]
+	path = PracticeSet2
+	url = https://github.com/SuperMex/PracticeSet2
