--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "PracticeSet2"]
 	path = PracticeSet2
 	url = https://github.com/SuperMex/PracticeSet2
+[submodule "udacity-practice-set-2"]
+	path = udacity-practice-set-2
+	url = https://github.com/SuperMex/udacity-practice-set-2
